--- a/Numbers/app/build.gradle
+++ b/Numbers/app/build.gradle
@@ -25,13 +25,20 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //ButterKnife
-    compile 'com.jakewharton:butterknife:8.6.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
 
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:design:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
-    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    //RxJava2
+    compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjavaVersion"
+    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
+
+    //SqlBrite
+    compile "com.squareup.sqlbrite2:sqlbrite:$rootProject.sqlbriteVersion"
+
+    compile "com.android.support:appcompat-v7:$rootProject.coreLibraryVersion"
+    compile "com.android.support:design:$rootProject.coreLibraryVersion"
+    compile "com.android.support:support-v4:$rootProject.coreLibraryVersion"
+    compile "com.android.support:cardview-v7:$rootProject.coreLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.coreLibraryVersion"
 
 }
