feat: add rxjava

--- a/Numbers/app/build.gradle
+++ b/Numbers/app/build.gradle
@@ -39,6 +39,11 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     compile "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$rootProject.retrofitAdapterVersion"
+
+    //RxJava2
+    compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjavaVersion"
+    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
 
     compile "com.android.support:appcompat-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:design:$rootProject.coreLibraryVersion"
