--- a/Numbers/app/build.gradle
+++ b/Numbers/app/build.gradle
@@ -41,14 +41,12 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$rootProject.retrofitAdapterVersion"
 
-    //RxJava2
-    compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjavaVersion"
-    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
-
     compile "com.android.support:appcompat-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:design:$rootProject.coreLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.coreLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.coreLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.coreLibraryVersion"
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
