--- a/Numbers/app/build.gradle
+++ b/Numbers/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -27,26 +31,21 @@ dependencies {
     //ButterKnife
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
-
     //RxJava2
     compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjavaVersion"
     compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
-
     //SqlBrite
     compile "com.squareup.sqlbrite2:sqlbrite:$rootProject.sqlbriteVersion"
-
     //Retrofit
     compile "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     compile "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$rootProject.retrofitAdapterVersion"
-
     compile "com.android.support:appcompat-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:design:$rootProject.coreLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.coreLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.coreLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.coreLibraryVersion"
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
