--- a/Numbers/app/src/main/AndroidManifest.xml
+++ b/Numbers/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".numbers.NumbersActivity">
+        <activity
+            android:name=".numbers.NumbersActivity"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -19,6 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".savedhistorynumbers.SavedOrHistoryActivity">
+        </activity>
+        <activity android:name=".about.AboutActivity">
         </activity>
     </application>
 
